# nsod

./: .gitignore  Cargo.toml  LICENSE  Makefile  README
.github/workflows/: codeql.yml
c/: nsod_open_hook.c  nsod_rust.h
cfg/: test.json
cfg_install/: system.rs  user.rs
misc/en/: README_en.txt  cfg_bin.txt  cfg_create.txt  cfg_delete.txt  cfg_route.txt  cfg_source.txt  cfg_source_simple.txt  cfg_start.txt  invalid_addr.txt  kv_key.txt  kv_mount.txt  kv_path.txt  usage.txt  vault_cred.txt  vault_identity_name.txt  vault_src_addr.txt  vault_src_engine.txt  vault_src_namespace_str.txt  vault_src_namespace_yn.txt  vault_src_start.txt  vault_src_timeout_s.txt  vault_src_timeout_yn.txt  vault_src_verify.txt
nsod_pkg/: Makefile
packager/: Make_installer  Makefile
src/: cfg_core.rs  cfg_lib.rs  cfg_struct.rs  cfg_ui.rs  cli.rs  cmd.rs  lib.rs  main.rs  nsod_cfg.rs  route.rs  run.rs  ui.rs  vault.rs
ui/en/: README.txt  README_en.txt  cfg_add_route.txt  cfg_bad_name.txt  cfg_create.txt  cfg_edit.txt  cfg_list.txt  cfg_route.txt  cfg_source.txt  cfg_start.txt  input_src_env.txt  input_src_file.txt  path_not_absolute.txt
