[package]
name = "nsod"
version = "0.1.0"
edition = "2024"

[lib]
name = "nsod_rust"
crate-type = ["cdylib"]

[dependencies]
vaultrs = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clearscreen = "1.0"
nix = { version = "0.30.1", features = ["process"] }
url = "2.5.7"
futures = "0.3.31"